- update .github/workflows/build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,8 @@ jobs:
       - name: uncompress msi
         shell: cmd
         run: |
-          .\installer.exe -UI:None -InstallAll -AutoInstall -Programs:%cd%\installation -Documents:%cd%\installation\Documents
+          md installation &&^
+          .\installer.exe -UI:None -InstallAll -AutoInstall -Programs:"%cd%\installation" -Documents:"%cd%\installation"
 
       # - shell: cmd
       #   run: xcopy /H /Y /C "Sculptris.exe.Portable.cmd" "installation"
