- update .github/workflows/build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: portable-release-actions-workflow
 on:
   push:
-    # # Sequence of patterns matched against refs/tags
-    # tags:
-    #   - '*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
       
 permissions:
   contents: write
@@ -20,7 +20,7 @@ jobs:
       - name: installer
         shell: cmd
         run: |
-          curl "https://altium-official-installers.s3.amazonaws.com/CircuitMaker_2.0/CircuitMakerSetup_2.3.0.3.exe?X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIA3DWNEQM7ZW6YHFNH/20250121/us-east-1/s3/aws4_request&X-Amz-Date=20250121T095802Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Signature=e6e05ef8750c5811e1d5e51b333e072d8e3e478dc11fd89cfb2e7a757cd9423b" -L --output installer.exe &&^
+          curl "https://altium-official-installers.s3.amazonaws.com/CircuitMaker_2.0/CircuitMakerSetup_2.3.0.3.exe?X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIA3DWNEQM7ZW6YHFNH/20250121/us-east-1/s3/aws4_request&X-Amz-Date=20250121T122056Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Signature=9b9cce55db15f8be35a31c42b0f365f4b4bb548281b386b7f2abb9b2e613dfb6" -L --output installer.exe &&^
           dir
           
       - name: uncompress msi
