- update .github/workflows/build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,14 +20,14 @@ jobs:
       - name: installer
         shell: cmd
         run: |
-          curl "https://altium-official-installers.s3.amazonaws.com/CircuitMaker_2.0/CircuitMakerSetup_2.3.0.3.exe?X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIA3DWNEQM7ZW6YHFNH/20250121/us-east-1/s3/aws4_request&X-Amz-Date=20250121T122539Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Signature=4adf9f770dae33c5cdc0a145998f9b93889d6d935478d2cc6395bb00771fa6ac" -L --output installer.exe &&^
+          curl "https://altium-official-installers.s3.amazonaws.com/CircuitMaker_2.0/CircuitMakerSetup_2.3.0.3.exe?X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIA3DWNEQM7ZW6YHFNH/20250121/us-east-1/s3/aws4_request&X-Amz-Date=20250121T123623Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Signature=d6c45fb0d4bd54a9186cd8d54d5ae69c7de052ddc1e1219ecf27c09aa9a8d993" -L -O &&^
           dir
           
       - name: uncompress msi
         shell: cmd
         run: |
           dir &&^
-          start "" /wait .\installer.exe -UI:None -User:${{ env.ALTIUM_USER }} -Password:${{ env.ALTIUM_PASSWORD }} -InstallAll -AutoInstall -Programs:%cd%\installation -Documents:%cd%\installation\Documents
+          start "" /wait .\CircuitMakerSetup_2.3.0.3.exe -UI:None -User:${{ env.ALTIUM_USER }} -Password:${{ env.ALTIUM_PASSWORD }} -InstallAll -AutoInstall -Programs:%cd%\installation -Documents:%cd%\installation\Documents
 
       - shell: cmd
         run: xcopy /H /Y /C "CircuitMaker.exe.Portable.cmd" "installation"
