--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         shell: cmd
         run: |
           dir &&^
-          start "" /wait .\CircuitMakerSetup_2.3.0.3.exe -UI:None -User:${{ env.ALTIUM_USER }} -Password:${{ env.ALTIUM_PASSWORD }} -InstallAll -AutoInstall -Programs:%cd%\installation -Documents:%cd%\installation\Documents
+          start "" /wait .\CircuitMakerSetup_2.3.0.3.exe -UI:None -User:${{ secrets.ALTIUM_USER }} -Password:${{ secrets.ALTIUM_PASSWORD }} -InstallAll -AutoInstall -Programs:%cd%\installation -Documents:%cd%\installation\Documents
 
       - shell: cmd
         run: xcopy /H /Y /C "CircuitMaker.exe.Portable.cmd" "installation"
